<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tag"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <TextView
        android:id="@+id/tag"
        style="@style/tagsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/banner"/>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/banner_description"
        android:scaleType="centerCrop"
        android:src="@drawable/saikle_logo"
        app:layout_constraintTop_toBottomOf="@id/tag"
        app:layout_constraintBottom_toTopOf="@id/contacts"
        app:layout_constraintVertical_weight="2"/>

    <TextView
        android:id="@+id/contacts"
        style="@style/tagsTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactTag"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintBottom_toTopOf="@id/location"/>

    <TextView
        android:id="@+id/location"
        style="@style/addressTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:drawableStart="@drawable/ic_map_pin"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/contacts"
        app:layout_constraintBottom_toTopOf="@id/website"/>

    <TextView
        android:id="@+id/website"
        style="@style/addressTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/website"
        android:drawableStart="@drawable/ic_chrome"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>